Improved cursor tracking thanks to: http://keithp.com/blogs/Cursor_tracking/

--- a/Makefile.in
+++ b/Makefile.in
@@ -342,6 +342,7 @@ USE_NLS = @USE_NLS@
 VERSION = @VERSION@
 XGETTEXT = @XGETTEXT@
 XGETTEXT_ARGS = @XGETTEXT_ARGS@
+XI_LIBS = @XI_LIBS@
 XMKMF = @XMKMF@
 XSYNC_LIBS = @XSYNC_LIBS@
 X_CFLAGS = @X_CFLAGS@
