--- a/config.h.in
+++ b/config.h.in
@@ -94,6 +94,9 @@
 /* Define to 1 if you have the <unistd.h> header file. */
 #undef HAVE_UNISTD_H
 
+/* Define to enable xi */
+#undef HAVE_XI
+
 /* Define to enable xsync */
 #undef HAVE_XSYNC
 
