--- a/debian/rules
+++ b/debian/rules
@@ -8,7 +8,7 @@ override_dh_strip:
 	dh_strip --dbg-package=xfwm4-dbg
 
 override_dh_auto_configure:
-	dh_auto_configure -- --disable-silent-rules --disable-compositor
+	dh_auto_configure -- --disable-silent-rules
 
 %:
 	dh $@ --parallel
